--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alan_react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nithish15l.github.io/news/",
   "dependencies": {
     "@alan-ai/alan-sdk-web": "^1.1.8",
     "@material-ui/core": "^4.10.1",
@@ -22,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
